Fix CSS for contents on mobile with Float main image

--- a/resources/sass/_media-post.scss
+++ b/resources/sass/_media-post.scss
@@ -38,6 +38,10 @@
 
     .post {
 
+        #contents {
+            clear: both;
+        }
+
 
         article {
             .adv-ads-after-article {
